# buurt-sense

./: .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.sh  verify_smolvlm_worker.cjs
alembic/: env.py  script.py.mako
alembic/versions/: 20240808_0001_initial_schema.py  20240815_0002_add_segment_metrics.py
app/: __init__.py  crud.py  database.py  inference.py  main.py  models.py  schemas.py  storage.py  utils.py
app/frontend/: index.html
app/frontend/static/: app.js  inference.worker.js  smolvlm.worker.js  styles.css  tflite_web_api_cc_simd.js
backend/: __init__.py  app.py  main.py  session_store.py
backend/api/: sessions.py
dev_helpers/: client_perf_investigation.md  db_reader.txt  steps_forward.txt
fastapi/: __init__.py  app.py  exceptions.py  responses.py  staticfiles.py  status.py  testclient.py
fastapi_shim/: __init__.py
frontend-tests/: model.spec.js  playwright.config.js
scripts/: init_db.py
src/buurtsense/: __init__.py
src/buurtsense/db/: __init__.py  base.py  models.py  session.py
src/buurtsense/runtime/: __init__.py  exceptions.py  recording.py
src/buurtsense/storage/: __init__.py  session_storage.py
tests/: conftest.py  test_frontend.py  test_inference.py  test_migrations.py  test_recording_orchestrator.py  test_session_storage.py  test_sessions.py  test_storage.py
