[project]
name = "buurt-sense"
version = "0.1.0"
description = "Core components for the Buurt Sense offline-first session storage."
authors = [{ name = "Buurt Sense" }]
requires-python = ">=3.11"
dependencies = [
  # Runtime dependencies (aligned with requirements.txt)
  "sqlmodel==0.0.14",
  "sqlalchemy==2.0.28",
  "pydantic==1.10.15",
  "fastapi==0.121.0",
  "timezonefinder==6.2.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
  # Needed for starlette.testclient / fastapi.testclient
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = [
  "E203",
  "E266",
]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"